<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtMore"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="28sp"
        android:textStyle="italic"
        android:background="@drawable/bg_card"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNotification"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMore"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageNotification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/notification_colored"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cardNotification"
        app:layout_constraintTop_toTopOf="@id/cardNotification"
        app:layout_constraintBottom_toBottomOf="@id/cardNotification"
        android:text="@string/notification"
        android:textSize="24sp"
        android:layout_marginStart="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPrivacy"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/cardNotification"
        app:layout_constraintTop_toBottomOf="@id/cardNotification"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagePrivacy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/privacy_colored"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cardPrivacy"
        app:layout_constraintTop_toTopOf="@id/cardPrivacy"
        app:layout_constraintBottom_toBottomOf="@id/cardPrivacy"
        android:text="@string/privacy"
        android:textSize="24sp"
        android:layout_marginStart="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLanguage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/cardPrivacy"
        app:layout_constraintTop_toBottomOf="@id/cardPrivacy"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageLanguage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/language_colored"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cardLanguage"
        app:layout_constraintTop_toTopOf="@id/cardLanguage"
        app:layout_constraintBottom_toBottomOf="@id/cardLanguage"
        android:text="@string/language"
        android:textSize="24sp"
        android:layout_marginStart="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardQuestion"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/cardLanguage"
        app:layout_constraintTop_toBottomOf="@id/cardLanguage"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageQuestion"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/question_colored"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cardQuestion"
        app:layout_constraintTop_toTopOf="@id/cardQuestion"
        app:layout_constraintBottom_toBottomOf="@id/cardQuestion"
        android:text="@string/ask_question"
        android:textSize="24sp"
        android:layout_marginStart="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>